--- a/package.json
+++ b/package.json
@@ -1,4 +1,8 @@
 {
+  "name": "backend",
+  "version": "1.0.0",
+  "description": "",
+  "main": "server.js",
   "dependencies": {
     "body-parser": "^1.20.3",
     "cors": "^2.8.5",
@@ -7,14 +11,10 @@
     "nodemailer": "^6.10.0",
     "nodemon": "^3.1.9"
   },
-  "name": "backend",
-  "version": "1.0.0",
-  "description": "",
-  "main": "nodemailer.js",
   "devDependencies": {},
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node server.js"
+    "start": "node server.js",
+    "dev": "nodemon server.js"
   },
   "repository": {
     "type": "git",
