nodemon package changes

--- a/package.json
+++ b/package.json
@@ -8,10 +8,8 @@
     "cors": "^2.8.5",
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
-    "nodemailer": "^6.10.0",
-    "nodemon": "^3.1.9"
+    "nodemailer": "^6.10.0"
   },
-  "devDependencies": {},
   "scripts": {
     "start": "node server.js",
     "dev": "nodemon server.js"
@@ -27,5 +25,8 @@
   "bugs": {
     "url": "https://github.com/aakash4372/education-server/issues"
   },
-  "homepage": "https://github.com/aakash4372/education-server#readme"
+  "homepage": "https://github.com/aakash4372/education-server#readme",
+  "devDependencies": {
+    "nodemon": "^3.1.9"
+  }
 }
